[package]
name = "mkv-to-mp4"
version = "0.1.0"
description = "A lightweight video converter"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
